# Notes-CLI

./: README.md  cli.md  notes.json  pyproject.toml  ruff.toml
cli_notes/: args.py  main.py  notes_repo.py  operations.py
cli_notes/utils/: utils.py
python_cli_notes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_module.py
